--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,93 @@
 body {
-  margin:0;
+  margin: 0;
   padding: 0;
   font-family: "Gill Sans", sans-serif;
-   font-size: 12pt;
+  font-size: 12pt;
 }
+
 h3 {
   font-family: cursive;
   font-style: italic;
+}
+
+.link-style {
+  text-decoration: none;
+  color: black;
+}
+
+.link-style:hover {
+  color: rgb(109, 11, 11);
+}
+
+.footer {
+  margin-top: 60px;
+}
+
+h6 {
+  color: rgb(109, 11, 11);
+}
+
+/* Home Page */
+.heading {
+  background-image: url('./app/assets/image/background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.8;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.banner {
+  font-size: 5em;
+  font-weight: bold;
+}
+
+.story {
+  font-size: 1.5em;
+}
+
+.menu {
+  text-align: center;
+  background-color: rgba(248, 239, 229, 0.3);
+}
+
+h1 {
+  color: rgb(69, 23, 23);
+  font-family: cursive;
+}
+
+@media (max-width: 768px) {
+  .banner {
+    font-size: 4em;
+  }
+
+  .story p {
+    font-size: 1em;
+  }
+}
+
+/* Menu Page */
+.menuPageHeading {
+  background-image: url('./app/assets/image/menu-background.jpg');
+  height: 50vh;
+  opacity: 0.7;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menuPageHeadingTxt {
+  color: white;
+  font-size: 3em;
+  font-weight: bold;
+}
+
+.divMenu {
+  margin-top: 60px;
 }
